[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cellcounterirb"
version = "0.0.1"
description = "Libreria de procesamiento de imagenes y conteo de celulas"

dependencies = [
  "numpy",
  "scipy",
  "opencv-python"
]

authors = [
  {name = "Cristian Alan Flores Flores", email = "al349722@edu.uaa.mx"},
  {name = "Angel Mauricio Cruz Dominguez", email = "al350584@edu.uaa.mx"},
  {name = "Jonathan Salvador De Lira Martinez", email = "al351881@edu.uaa.mx"}
]

readme = "README.md"
